<resources>
    <string name="app_name">宇医平板</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="height_blood">收缩压(高压)</string>
    <string name="low_blood">舒张压(低压)</string>
    <string name="tem">体温</string>
    <string name="str_register">预约挂号</string>
    <string name="str_drugmall">我的药品</string>
    <string name="information">资讯</string>
    <string name="add_patient">添加</string>
    <string name="measure">测量</string>
    <string name="blood_tv">血压计</string>
    <string name="blood_measure_tv">血压测量记录</string>
    <string name="tem_ji">体温计</string>
    <string name="tem_measure_tv">体温测量记录</string>
    <string name="register_title">预约挂号</string>
    <string name="select_opd">选择科室</string>
    <string name="morning">上午</string>
    <string name="afternoon">下午</string>
    <string name="registertion">挂号</string>
    <string name="yu">余号</string>
    <string name="select_patient">选择挂号人</string>
    <string name="add_person">添加</string>

    <string name="blood_m">血压计</string>
    <string name="tem_m">温度计</string>
    <string name="hand_input">手动输入</string>
    <string name="blood_height_t">高压/mmHg</string>
    <string name="blood_Low_t">低压/mmHg</string>
    <string name="Data">数据录入</string>
    <string name="save">保存</string>
    <string name="edit_hint">搜索医院</string>
    <string name="ask_title">咨询</string>
    <string name="network">暂无医院信息<font color="#00bfff">点击加载</font></string>


    <string name="_90mmhg_140mmhg"><![CDATA[90mmHg<收缩压<140mmHg]]></string>
    <string name="_60mmhg_90mmhg"><![CDATA[60mmHg<舒张压<90mmHg]]></string>

    <string name="my_settings_aboutOurs_msg">宇医app，希望通过网上医疗的形式能够解决用户的一些医疗的基本需求，包括：测量监控自己及家人的健康数据；足不出户解决购药问题；提前预约专家挂号问题；在家与医生面对面交流，解决一些简单的问诊等。</string>
    <string name="my_settings_aboutOurs_versionCode">当前版本号：1.0（wanyu2017）</string>
    <string name="title_activity_setting_contact">SettingContactActivity</string>
    <string name="_2018_r_n">2018\n10-18</string>

    <string name="fuwu">
        敬告各位业主:\n
&#160;&#160;&#160;&#160;&#160;&#160;本服务为普通医学健康咨询,只能对业主的一些常见病提出医学建议.
因为中医诊治疾病需要望闻、问、切,西医需要望、触、叩、听和化验、超声、放射等检查,
本服务只能根据您所陈述的和我们视频时看到的进行分析,资料欠缺很多,
只能在当时提出一些医学建议,也很可能会告诉您到医院某科就诊,进行专科诊治.\n
&#160;&#160;&#160;&#160;&#160;&#160;我们医务人员会尽自己自己最大能力为您提供咨询服务,但也难免有让各位业主不满意之处,
请各位将我们医务人员工作欠缺之处在工作时间反馈到涿州中医医院医务部或打电话到3680284.
我们会根据您的陈述和保存的视频资料进行整改,提高我们的服务水平,将保障各位业主身体健康工作做好.

    </string>


</resources>
