<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_input_blood"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f2f2f2"
    tools:context="com.technology.yuyipad.activity.InputBloodActivity">

    <RelativeLayout
        android:id="@+id/all_data_blood"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/blood_tv_title"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@color/color_white"
            android:gravity="center"
            android:text="@string/hand_input"
            android:textColor="@color/color_333333"
            android:textSize="19sp" />


        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/blood_tv_title"
            android:scrollbars="none">

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/rl_h_l"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/color_383838">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true">
                        <!--高压-->
                        <RelativeLayout
                            android:id="@+id/height_rl"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center">

                            <EditText
                                android:id="@+id/blood_height_num"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:background="@null"
                                android:hint="请输入..."
                                android:inputType="number"
                                android:maxLength="3"
                                android:textColor="@color/name_color"
                                android:textColorHint="@color/color_999999"
                                android:textSize="19sp" />

                            <TextView
                                android:id="@+id/blood_height_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/blood_height_num"
                                android:layout_marginTop="20dp"
                                android:text="@string/blood_height_t"
                                android:textColor="@color/color_white"
                                android:textSize="19sp" />
                        </RelativeLayout>
                        <!--低压-->
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="227dp"
                            android:layout_toRightOf="@id/height_rl"
                            android:gravity="center">

                            <EditText
                                android:id="@+id/blood_low_num"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:background="@null"
                                android:hint="请输入..."
                                android:inputType="number"
                                android:maxLength="3"
                                android:textColor="@color/name_color"
                                android:textColorHint="@color/color_999999"
                                android:textSize="19sp" />

                            <TextView
                                android:id="@+id/blood_low_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/blood_low_num"
                                android:layout_marginTop="20dp"
                                android:text="@string/blood_Low_t"
                                android:textColor="@color/color_white"
                                android:textSize="19sp" />
                        </RelativeLayout>


                    </RelativeLayout>

                </RelativeLayout>

                <TextView
                    android:paddingLeft="15dp"
                    android:background="@color/color_white"
                    android:id="@+id/data_tv"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@id/rl_h_l"
                    android:gravity="center_vertical"
                    android:text="@string/Data"
                    android:textColor="@color/color_333333"
                    android:textSize="19sp" />

                <View
                    android:id="@+id/line_data"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_below="@id/data_tv"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/color_e5e5e5" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycle_view_person"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="@color/color_white"
                    android:layout_below="@id/line_data"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp">

                </android.support.v7.widget.RecyclerView>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/recycle_view_person"
                    android:background="@color/color_f2f2f2">

                    <TextView
                        android:id="@+id/save_blood_data"
                        android:layout_width="250dp"
                        android:layout_height="42dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:background="@mipmap/save_bg"
                        android:gravity="center"
                        android:text="@string/save"
                        android:textColor="@color/color_white"
                        android:textSize="19sp" />
                </RelativeLayout>


            </RelativeLayout>
        </ScrollView>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/again_login_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ffffff"
        android:visibility="gone">

        <ImageView
            android:id="@+id/login_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/nostatus" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_img"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="登录异常,请重新登录"
            android:textColor="@color/cccccc"
            android:textSize="19sp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>
